fix: remove first_name and last_name separation
