# openapi.yml
@@ -44,8 +44,7 @@ paths:
               required:
                 - email
                 - password
-                - firstName
-                - lastName
+                - name
               properties:
                 email:
                   type: string
@@ -55,12 +54,9 @@ paths:
                   type: string
                   format: password
                   example: password123
-                firstName:
+                name:
                   type: string
-                  example: John
-                lastName:
-                  type: string
-                  example: Doe
+                  example: John Doe
                 address:
                   type: string
                   nullable: true
@@ -80,12 +76,9 @@ paths:
                   email:
                     type: string
                     example: user@example.com
-                  firstName:
+                  name:
                     type: string
-                    example: John
-                  lastName:
-                    type: string
-                    example: Doe
+                    example: John Doe
                   address:
                     type: string
                     nullable: true
