# src/modules/auth/models/user.entity.ts
@@ -12,10 +12,7 @@ export class User {
   password: string;
 
   @Column()
-  firstName: string;
-
-  @Column()
-  lastName: string;
+  name: string;
 
   @Column({ nullable: true })
   address: string;
